<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learning My City</string>
    <string name="title_main">Learning My City</string>
    <string name="title_task">Learning My City</string>
    <string name="title_quest_overview">Quest Overview</string>
    <string name="title_path_overview">Path Overview</string>
    <string name="title_description">Learning My City</string>
    <string name="title_map">Map</string>
    <string name="title_hints">Hints</string>
    <string name="title_path_list">Learning My City</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_feedback">Feedback</string>
    <string name="edittext_task_answerfield_hint">Enter your answer here</string>
    <string name="edittext_score_upload_hint">Username</string>
    <string name="edittext_feedback_name_hint">Name</string>
    <string name="edittext_feedback_subject_hint">Subject</string>
    <string name="edittext_feedback_message_hint">Message</string>
    <string name="button_new_game">New Game</string>
    <string name="button_continue_game">Continue Game</string>
    <string name="button_leaderboard">Leaderboard</string>
    <string name="button_task_get_hint">Get Hint</string>
    <string name="button_task_validate_answer">Answer</string>
    <string name="button_open_map">Open Map</string>
    <string name="button_quest_next">Continue to next Quest..</string>
    <string name="button_score_upload">Upload Score</string>
    <string name="button_feedback_send">Send</string>
    <string name="footer_text">View Paths</string>
    <string name="dbPath">Path</string>
    <string name="dbPathId">path_id</string>
    <string name="dbPathName">path_name</string>
    <string name="dbPathDescription">path_description</string>
    <string name="dbQuest">Quest</string>
    <string name="dbQuestId">quest_id</string>
    <string name="dbQuestName">quest_name</string>
    <string name="dbQuestImage">quest_image</string>
    <string name="dbQuestLongitude">quest_longitude</string>
    <string name="dbQuestLatitude">quest_latitude</string>
    <string name="dbQuestPathId">path_id</string>
    <string name="dbQuestDescription">quest_description</string>
    <string name="dbQuestCompleted">quest_completed</string>
    <string name="dbTask">Task</string>
    <string name="dbTaskId">task_id</string>
    <string name="dbTaskQuestId">quest_id</string>
    <string name="dbTaskDescription">task_description</string>
    <string name="dbTaskCompleted">task_completed</string>
    <string name="dbTaskImage">task_image</string>
    <string name="dbTaskType">task_type</string>
    <string name="dbTaskPenalty">task_penalty</string>
    <string name="dbTaskWrongAnswers">task_wrong_answers</string>
    <string name="dbElement">Element</string>
    <string name="dbElementId">element_id</string>
    <string name="dbElementPathId">element_path_id</string>
    <string name="dbElementQuestId">element_quest_id</string>
    <string name="dbElementTaskId">element_task_id</string>
    <string name="dbGameState">GameState</string>
    <string name="dbGameStateId">game_state_id</string>
    <string name="dbGameStatePathId">path_id</string>
    <string name="dbGameStateQuestId">quest_id</string>
    <string name="dbGameStateTaskId">task_id</string>
    <string name="dbQuestion">Question</string>
    <string name="dbQuestionId">question_id</string>
    <string name="dbQuestionQuestion">question_question</string>
    <string name="dbQuestionSolution">question_solution</string>
    <string name="dbQuestionTaskId">task_id</string>
    <string name="dbAlternative">ALternative</string>
    <string name="dbAlternativeId">alternative_id</string>
    <string name="dbAlternativeAlternative">alternative_alternative</string>
    <string name="dbAlternativeTaskId">task_id</string>
    <string name="dbPenalties">Penalties</string>
    <string name="dbPenaltiesId">penalties_id</string>
    <string name="dbPenaltiesWrongAnswers">penalties_wrong_answers</string>
    <string name="dbPenaltiesUsedHints">penalties_used_hints</string>
    <string name="dbPenaltiesTaskId">task_id</string>
    <string name="dbHint">Hint</string>
    <string name="dbHintId">hint_id</string>
    <string name="dbHintDescription">hint_description</string>
    <string name="dbHintTaskId">task_id</string>
    <string name="dbHintPenalty">hint_penalty</string>
    <string name="dbHintUsed">hint_used</string>
    <string name="dbHintImage">hint_image</string>
    <string name="dbImage">Image</string>
    <string name="dbImageId">image_id</string>
    <string name="dbImageName">image_name</string>
    <string name="dbImageString">image_string</string>
    <string name="dbGPS">GPS</string>
    <string name="dbGPSId">gps_id</string>
    <string name="dbGPSLongitude">gps_longitude</string>
    <string name="dbGPSLatitude">gps_latitude</string>
    <string name="dbGPSRadius">gps_radius</string>
    <string name="dbGPSQuestId">quest_id</string>
    <string name="GPS_wrong_location">Wrong Location</string>
    <string name="GPS_correct_location">Correct Location</string>
    <string name="GPS_unavailable">GPS is not available</string>
    <string name="GPS_check_location">Check Location</string>
    <string name="GPS_progressBar">Obtaining Location via GPS</string>
    <string name="GPS_prompt_title">GPS Error</string>
    <string name="GPS_prompt_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="dialog_title_confirm_upload">Enter a username</string>
    <string name="dialog_title_confirm_answer">Confirm answer?</string>
    <string name="dialog_text_confirm_answer">Be careful! A wrong answer will result in a penalty of</string>
    <string name="dialog_title_confirm_hint">Confirm hint?</string>
    <string name="dialog_text_confirm_hint">Are you sure you want an additional hint? Penalty:</string>
    <string name="dialog_title_confirm_battery">Battery not fully charged!</string>
    <string name="dialog_text_confirm_battery">It is recommended that you charge your phone above 80% to play the game. Continue anyway?</string>
    <string name="dialog_title_confirm_new_game">New Game</string>
    <string name="dialog_text_confirm_new_game">Warning! All saved progress will be lost. Continue anyway?</string>
    <string name="dialog_title_confirm_exit">Closing Task!</string>
    <string name="dialog_text_confirm_exit">Are you sure you want to return to main menu?</string>
    <string name="dialog_text_confirm_download_path">Download and start a new game in</string>
    <string name="dialog_text_select_path">Please select a new path to proceed.</string>
    <string name="toast_wrong_answer">Wrong Answer..</string>
    <string name="toast_correct_answer">Correct Answer!</string>
    <string name="toast_gps_answer_button">You must find the correct location first, then continue to the next task!</string>
    <string name="toast_no_description">Description will be available as soon as you find the location.</string>
    <string name="toast_no_internet_new_game">Sorry, you need an active internet connection to start a new game.</string>
    <string name="toast_no_internet_leaderboard">Sorry, you need an active internet connection to see the leaderboard.</string>
    <string name="toast_no_internet_upload_score">Sorry, you need an active internet connection to upload your score.</string>
    <string name="toast_server_error">Failed to connect to server..</string>
    <string name="toast_list_error">Failed to download or import path list..</string>
    <string name="toast_path_error">Failed to download or import selected path..</string>
    <string name="toast_download_list_ok">List updated!</string>
    <string name="toast_download_path_ok">Downloading completed! You can now turn off internet connection.</string>
    <string name="toast_score_upload_ok">Score Uploaded!</string>
    <string name="message_path_completed">Path Completed!</string>
    <string name="message_quest_completed">Quest Completed!</string>
    <string name="message_perfect">You did perfect! Well done!</string>
    <string name="message_very_good">You did pretty good!</string>
    <string name="message_good">You did good! Try to improve next time.</string>
    <string name="message_bad">You didn\'t pay attention! Try more next time.</string>
    <string name="message_wrong_answers">Wrong Answers Penalty:</string>
    <string name="message_used_hints">Used Hints Penalty:</string>
    <string name="message_total_penalty">Total Penalty:</string>
    <string name="message_total_score">Total Score:</string>
    <string name="message_target_location">Location - Target</string>
    <string name="message_score">Score:</string>
    <string name="message_version">v1.1</string>
    <string name="message_name">Name:</string>
    <string name="message_date">Time since:</string>
    <string name="message_download_content">Downloading content</string>
    <string name="message_download_images">Downloading images</string>
    <string name="message_reset_database">Reseting database</string>
    <string name="message_fill_database">Filling database</string>
    <string name="message_programmer"><b><i>Programmer</i></b></string>
    <string name="message_idea"><b><i>Have you an idea or quiz worth sharing?</i></b></string>
    <string name="message_bug"><b><i>Have you found a bug?</i></b></string>
    <string name="message_email">Go to setttings -> Feedback and fill in the form.</string>
    <string name="message_copyright"><b><i>I do not own any of these songs and will gladly remove any songs that the owner would like taken down. Please send me an email and I will comply right away.</i></b></string>
    <string name="message_programmer_name">Tsoukalas Dimitris</string>

</resources>