<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.learningmycity.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/feedback"
                android:title="@string/action_feedback"/>
            <item
                android:id="@+id/about"
                android:title="@string/action_about"/>
        </menu>
    </item>

</menu>