<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_quest_overview"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_leaderboard_bottom_margin"
    android:paddingLeft="@dimen/activity_leaderboard_left_margin"
    android:paddingRight="@dimen/activity_leaderboard_right_margin"
    android:paddingTop="@dimen/activity_leaderboard_top_margin" >

    <Spinner
        android:id="@+id/paths_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/message_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/message_score" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/message_date" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <ScrollView
        android:id="@+id/score_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false" >
    </ScrollView>

</LinearLayout>